fix a big of collapsed navigation bar

--- a/css/main.css
+++ b/css/main.css
@@ -53,9 +53,9 @@ body {
 }
 #menu {
     width: 100%;
-    margin: 0%;
     font-size: 1.2em;
     background-color: #DC143C;
+    border-radius: 4px
 }
 
 
